--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "colorchanger",
   "type": "module",
   "scripts": {
-    "start": "eslint ./ & node index.js",
+    "start": "node index.js",
     "dev": "eslint ./ & nodemon index.js",
     "lint": "eslint ./ & npx depcheck",
     "lint:fix": "eslint ./ --fix"
